Move to Gradle-standard source layout, move dev tooling out of the root
- src/{physics,play,render}/*.java and Table_Tennis_In_3D.java -> src/main/java/...
- src/physics/SelfTest.java and src/play/RallyTest.java -> src/test/java/...
  (they are validation suites, not shipped game code)
- build.gradle: drop the custom srcDirs=['src'] override now that source lives
  in Gradle's default paths; add a rallyTest task; wire test/check/build to
  run both selfTest and rallyTest
- intellij-mcp-bridge/ (repo root) -> tools/intellij-mcp-bridge/, with a new
  tools/README.md -- editor-integration tooling, unrelated to the Java game
- Split the long root README into docs/{DESIGN,DEVELOPMENT,GAMEPLAY}.md plus
  a docs/README.md index; root README trimmed to an overview with links
- .vscode/tasks.json: add Build/Check/Rally Test tasks with Windows-specific
  commands alongside the POSIX ones
- .gitignore: anchor ignores to the repo root, add Python bytecode ignores
  for the relocated bridge tool

No behavior change. ./gradlew check (101 + 29 checks) passes against the new
layout.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>